--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,16 @@ h1, h2, h3, h4, h5, h6 {
     transform: rotate(360deg);
   }
 }
+
+.column1, .column2, .column3, .column4 {
+  width: 25%;
+  
+}
+
+/* Responsive layout - makes the four columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column1, .column2, .column3, .column4 {
+    width: 100%;
+    margin-top: 10%;
+  }
+}
